[gd_scene load_steps=5 format=3 uid="uid://bwdogjp6qja5d"]

[ext_resource type="Texture2D" uid="uid://b70n60or5w1c0" path="res://Art/Thor.png" id="1_itkos"]
[ext_resource type="Script" path="res://Scenes/alchemy_table.gd" id="1_sfmwd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_34138"]
size = Vector2(12, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w70ce"]
size = Vector2(22, 13)

[node name="alchemy_table" type="Node2D"]
scale = Vector2(1.74936, 1.69284)
script = ExtResource("1_sfmwd")

[node name="Thor" type="Sprite2D" parent="."]
position = Vector2(-2.38419e-07, 2.38419e-07)
scale = Vector2(0.0212651, 0.0212651)
texture = ExtResource("1_itkos")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_34138")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 4.76837e-07)
scale = Vector2(1.16006, 1.94516)
shape = SubResource("RectangleShape2D_w70ce")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_left = 6.0
offset_top = -5.0
offset_right = 11.0
metadata/_edit_use_anchors_ = true

[node name="use_computer_label" type="Label" parent="."]
visible = false
offset_left = 6.28801
offset_top = -8.27014
offset_right = 26.288
offset_bottom = 16.7299
scale = Vector2(0.351012, 0.351012)
text = "[F]"
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
